--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>Building accessible and inclusive real world experience 101</title>
+  <title>Building accessible and inclusive real world experience</title>
 </head>
 
 <body>
